public/css/style.css
/* todas las clases terminadas en "-custom" son clases que modifican el comportamiento
de los elementos bootstrap utilizados */

body {
    background-color: white;
}

a {
    color:#198754;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

header {
    background-image: url(../img/pattern.png);
    padding-left: 5%;
    padding-right: 5%;
    margin-top: 56px;
}

article,
main {
    background-color: white;
    margin-top: 1em;
}

article h3 {
    padding-bottom:0.5em;
    border-bottom: 1px dotted #198754;
}

article ul > li {
    margin-top: 1em;
    margin-bottom: 1em;
}

iframe {
    width: 80%;
    height: 300px;
    display: block;
}

aside {
    background-color: white;
    font-size: smaller;
    margin-top: 0.5em;
}

aside > p {
    margin: 1em;
}

footer {
    background-image: url(../img/pattern.png);
    text-align: center;
    color: white;
    padding: 2em;
    font-size: smaller;
    margin-top: 1em;
}

footer img {
    margin-bottom: 1em;
}

footer a {
    color:#207c3f;
    text-decoration: none;
}

/* muestra main/article y aside como principal y barra lateral en resoluciones mayores a 100px */ 
@media (min-width: 1000px) {
    article,
    main {
        width: 75%;
        padding-right: 2em;
    }
  
    aside {
        width: 25%;
    }
}

/* muestra main/article y aside uno encima del otro, iframe ocupando la totalidad del
elemento parent en resoluciones menores a 100px */ 
@media (max-width: 1000px) {
    article,
    main,
    aside {
        flex-basis: 100%;
    }

    aside {
        padding-top: 1em;
        border-top: 1px dotted #198754;
    }

    iframe {
        width: 100%;
    }
}

form {
    width: 90%;
}

label, input {display: block;}

.container {
    background-color: white;
    width: 85%;
    margin-top: 1em;
    display: flex;
    flex-wrap: wrap;
    padding: 0;
}

@media (max-width: 1000px) {
    .container {
        width: 90%;
    }
}

.navbar-custom {
    padding-left: 3%;
    padding-right: 3%;
}

.brand-h1-custom,
.brand-h1-custom a {
    font-size: x-large;
    margin: 0;
}

.navbar-custom a:hover {
    text-decoration: none;
    color: white;
}

@media (min-width: 1000px) {
    .navbar-custom {
        padding-left: 7%;
        padding-right: 7%;
    }
}

/* personalización elementos bootstrap: efecto fade out indicadores carousel */
.carousel-indicators-custom [data-bs-target] {
    border-radius: 50%;
    width: 0.65em;
    height: 0.65em;
    margin-left: 0.65em;
    margin-right: 0.65em;
}

.carousel-indicators-custom {
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.5s, visibility 0s 0.5s;
 }

.carousel:hover .carousel-indicators-custom {
    opacity: 1;
    visibility: visible;
    transition-delay: 0s;
 }
 /* fin efecto fade out en indicadores carousel */

@media (min-width: 915px) {
    .carousel-custom {
        width: 850px;
        margin-left: auto;
        margin-right: auto;
    }
}

.card-big-custom a {
    text-decoration: none;
    color: white;
}

.card-custom {
    border-radius: 0;
    border: none;
}

.card-img-top-custom {
    margin-bottom: 0.5em;
}

.card-img-overlay-custom {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

@media (min-width: 915px) {
    .card-img-big-custom {
        width: 850px;
        margin-left: auto;
        margin-right: auto;
    }
}

.h1-custom {
    padding-bottom: 0.25em;
    border-bottom: 2px dotted white;
}

.width-custom {
    width: 90%
}

/* contenedor grid responsive index */
.bloc-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 1.5em;
    margin-bottom: 1.5em;
}
  
.big-bloc {
    grid-column: 1 / span 2;
    background-color: white;
}
  
.smol-bloc {
    background-color: white;
    font-size: smaller;
}

@media (min-width: 800px) {
    .bloc-container {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
    }

    .big-bloc {
        grid-column: span 2;
    }

    .smol-bloc {
        grid-column: span 1;
    }
} 

.article-list {
    font-size: smaller;
}

.descr {
    padding-top: 0;
}

@media (max-width: 768px) {
    .descr {
        padding-left: 0;
        padding-top: 0.5em;
    }
}

.article-abstract {
    width: 55%;
    padding-right: 2em;
}

.article-map {
    width: 45%;
}

.article-map-bg {
    padding: 1em;
    padding-bottom: 0.5em;
    padding-right: 0.5em;
    background-color: #DCEDE5;
    border: 0;
}

/* permite que la navbar no tape el título de la sección*/
.map-index {
    scroll-margin-top: 66px;
}

.media-container {
    padding: 0;
    padding-top: 0.5em;
    padding-bottom: 1em;
    margin-bottom: 0.5em;
}

.article-img {
    width: 80%;
}

@media (max-width: 1000px) {
    .article-img {
        width: 100%;
    }
}

.figure-caption-custom {
    width: 70%;
    padding-top: 0.5em;;
}

.blockquote-custom {
    width: 90%;
    background-color: #DCEDE5;
    font-size:large;
    border: 0;
    margin: 1.5em;
    padding: 1em;
}

.code {
    font-family: Consolas,'Lucida Console', 'Courier New', monospace;
    font-size: smaller;
    background-color: #7ce0b1;
    padding: 3px;
}

.code-block {
    padding: 1em;
    font-family: Consolas,'Lucida Console', 'Courier New', monospace;
    font-size: smaller;
    background-color: #DCEDE5;
    white-space: pre-line;
    width: 80%;
}

@media (max-width: 1000px) {
    .code-block {
        width: 100%;
    }
}

.required:after {
    color: #bd2d70;
    content:" *";
}

#required-info {
    color: #bd2d70;
    font-size: smaller;
}

.pagination-custom {
    margin-top: 1em;
    margin-bottom: 1.5em;
}

.pagination-custom > li > a {
    color: #198754;
}

.pagination-custom > li > a:focus,
.pagination-custom > li > a:hover,
.pagination-custom > li > span:focus,
.pagination-custom > li > span:hover {
    color: #5a5a5a;
    background-color: #eee;
    border-color: #ddd;
    text-decoration: none;
}

.pagination-custom > .active > a {
    color: white;
    background-color: #198754;
    border: solid 1px #198754;
}

.pagination-custom > .active > a:hover {
    background-color: #198754;
    border: solid 1px #198754;
}

.card-side {
    margin-top: 0.5em;
    margin-bottom: 1em;
}

.advert {
    margin-top: 1.5em;
    margin-bottom: 1.5em;
}

.bg-py {
    background-color: #ceebd6;
    font-weight: 500;
}

.related {
    padding-left: 1em;
    border-left: 1px dotted #198754;
    margin-top: 0.75em;
    margin-bottom: 0.75em;
}

.signature > p {
    color:#797979;
    font-size: smaller;
    margin: 0;
}

.signature > p > a {
    color:#797979;
    text-decoration: underline;
}

.signature > p > a:hover {
    color: #43ac5d;   
}

